HOTFIX: Error al ejecutar prototipo